Correct verical alignment of edit icons

--- a/src/components/gf3Edit/style/edit.less
+++ b/src/components/gf3Edit/style/edit.less
@@ -7,6 +7,10 @@
     background-color: #1A3D1A;
   }
 
+  .fa {
+    vertical-align: middle;
+  }
+
   .fa-plus {
     border: 0 !important;
     box-shadow: unset !important;
